--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,17 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+.gradle
+/build/
+/out/
+/build-cache/
+!gradle/wrapper/gradle-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 # Package Files #
 *.jar
